unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/SFDC_Channel_Account_Plan__c.object-meta.xml
<CustomObject>
    <description>What: High level, time bound plan outlining joint vision statements and a roadmap for success. Channel plans are created for vendors and partners.
Who: Sales Team</description>
    <label>Channel Plan</label>
    <nameField>
        <label>Channel Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>