unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>