unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/fields/SDO_Experience_Active__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>