unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/fields/SDO_Experience_Business_Challenges__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_Business_Challenges__c</fullName>
    <label>Business Challenges</label>
    <type>TextArea</type>
</CustomField>