unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/fields/SDO_Experience_CompanyChannel__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_CompanyChannel__c</fullName>
    <description>Returns true when the current user&#39;s associated account is the same as for the channel plan. Used in Partner Central for list view visibility.</description>
    <formula>SDO_Experience_Partner_Account__r.Id =  $User.Account_Id_Formula__c</formula>
    <inlineHelpText>Returns true when the current user&#39;s associated account is the same as for the channel plan. Used in Partner Central for list view visibility.</inlineHelpText>
    <label>My Company&#39;s Channel Plan</label>
    <type>Checkbox</type>
</CustomField>