unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/fields/SDO_Experience_Owner__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>