unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/fields/SDO_Experience_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_Partner_Account__c</fullName>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channel Account Plans</relationshipLabel>
    <relationshipName>ChannelAccountPlans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>