unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/fields/SDO_Experience_Status__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Achieved</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>