unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/fields/SDO_Experience_Strategy__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_Strategy__c</fullName>
    <label>Strategy</label>
    <type>TextArea</type>
</CustomField>