unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/fields/SDO_Experience_Vision__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_Vision__c</fullName>
    <label>Vision</label>
    <type>TextArea</type>
</CustomField>