unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/listViews/Active_Future_Channel_Plans.listView-meta.xml
<ListView>
    <fullName>Active_Future_Channel_Plans</fullName>
    <columns>NAME</columns>
    <columns>SDO_Experience_Status__c</columns>
    <columns>SDO_Experience_Active__c</columns>
    <columns>SDO_Experience_Target__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SDO_Experience_CompanyChannel__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active &amp; Future Channel Plans</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>