unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SDO_Experience_Partner_Account__c</columns>
    <columns>SDO_Experience_Target__c</columns>
    <columns>SDO_Experience_Status__c</columns>
    <columns>SDO_Experience_Active__c</columns>
    <columns>SDO_Experience_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>