unpackaged/main/default/objects/SFDC_Channel_Account_Plan__c/listViews/My_Plans_Company.listView-meta.xml
<ListView>
    <fullName>My_Plans_Company</fullName>
    <columns>NAME</columns>
    <columns>SDO_Experience_Status__c</columns>
    <columns>SDO_Experience_Active__c</columns>
    <columns>SDO_Experience_Target__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SDO_Experience_CompanyChannel__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Company&#39;s Plans</label>
    <sharedTo>
        <allInternalUsers />
        <allPartnerUsers />
    </sharedTo>
</ListView>